Fix Jenkins deployment if no plugins are used

--- a/values/jenkins.yaml
+++ b/values/jenkins.yaml
@@ -60,7 +60,9 @@ master:
 
   additionalPlugins:
     - "ldap:1.26"
+%{ if length(additional_plugins) < 0 }
     ${ additional_plugins }
+%{ endif }
 
   JCasC:
     enabled: true
